@@ -1,5 +1,6 @@
 version 8.0
 date: dd/mm/yyyy
+  * user notification APIs based on Lucene index
   * allow to configure remote alignment service URL
   * automatic update of the PEARL part of a Custom Form with inferred annotations
   * new API for the programmatic creation of STProperties
